--- a/youbot/experiments/kb_3_from_archival_graph/3.ipynb
+++ b/youbot/experiments/kb_3_from_archival_graph/3.ipynb
@@ -58,6 +58,8 @@
     "nlp = spacy.load('en_core_web_md')\n",
     "cache_dir = \"./llm_cache\"\n",
     "\n",
+    "# actually just do an external config file\n",
+    "\n",
     "llm_config = {\n",
     "    \"task\": {\n",
     "        \"@llm_tasks\": \"spacy.REL.v1\",\n",
