--- a/youbot/experiments/kb_3_from_archival_graph/3.ipynb
+++ b/youbot/experiments/kb_3_from_archival_graph/3.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/tombedor/development/youbot/.venv/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import spacy\n",
     "from spacy import displacy\n",
@@ -31,41 +22,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 77%|███████▋  | 147/192 [02:16<00:51,  1.15s/it]"
+     ]
+    }
+   ],
    "source": [
     "\n",
-    "llm_config = {\n",
-    "    \"task\": {\n",
-    "        \"@llm_tasks\": \"spacy.REL.v1\",\n",
-    "        \"labels\": [\"work for\", \"founder of\", \"interested in\", \"lives in\", \"associated with\", \"attendees of\", \"organizer of\"]\n",
-    "    },\n",
-    "    \"model\": {\n",
-    "        \"@llm_models\": \"spacy.Dolly.v1\",\n",
-    "        \"name\": \"dolly-v2-3b\"  # For better performance, use 'dolly-v2-12b' instead\n",
-    "    },\n",
-    "    \"cache\": cache_dir,\n",
-    "    \"save_io\": True  # or False, depending on your needs\n",
-    "}\n",
-    "nlp.add_pipe(\"llm\", config=llm_config)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
+    "from tqdm import tqdm\n",
     "from youbot.store import Store\n",
     "\n",
     "\n",
     "MESSAGES_COUNT = 10\n",
     "\n",
+    "docs = Store().get_archival_messages()#z[:MESSAGES_COUNT]\n",
     "\n",
-    "# 0. Create documents as transcription logs of converstaions\n",
-    "docs = Store().get_archival_messages()[:MESSAGES_COUNT]\n"
+    "\n",
+    "docs_with_rels = []\n",
+    "for doc in tqdm(docs):\n",
+    "    docs_with_rels.append(nlp(doc))\n",
+    "\n"
    ]
   },
   {
@@ -75,11 +57,90 @@
    "outputs": [],
    "source": [
     "\n",
+    "doc = docs_with_rels[0]\n",
+    "\n",
     "# For NER visualization:\n",
     "displacy.render(doc, style='ent', jupyter=True)\n",
     "\n",
     "# For dependency visualization:\n",
-    "displacy.render(doc, style='dep', jupyter=True)"
+    "# displacy.render(doc, style='dep', jupyter=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Tuple\n",
+    "from spacy.tokens.span import Span\n",
+    "\n",
+    "\n",
+    "def get_kb_entity_id(ent: Span) -> Tuple[str, str]:\n",
+    "    return (ent.text, ent.label_)\n",
+    "\n",
+    "# key: entity id\n",
+    "# value: set[fact]\n",
+    "kb_facts_by_entity = {}\n",
+    "\n",
+    "# key: (entity id, entity id)\n",
+    "# value: set[fact]\n",
+    "kb_facts_by_relation = {}\n",
+    "\n",
+    "\n",
+    "for doc in docs_with_rels:\n",
+    "    entity_ids = [get_kb_entity_id(ent) for ent in doc.ents]\n",
+    "    \n",
+    "    for ent in doc.ents:\n",
+    "        id = get_kb_entity_id(ent)\n",
+    "        s = kb_facts_by_entity.get(id, set())\n",
+    "        s.add(doc.text)\n",
+    "        kb_facts_by_entity[id] = s\n",
+    "    \n",
+    "    for rel in doc._.rel:\n",
+    "        dep_id = entity_ids[rel.dep]\n",
+    "        dest_id = entity_ids[rel.dest]\n",
+    "        relation = rel.relation\n",
+    "\n",
+    "        if dep_id == dest_id:\n",
+    "            continue\n",
+    "        \n",
+    "        \n",
+    "        s = kb_facts_by_relation.get((dep_id, relation, dest_id), set())\n",
+    "        s.add(doc.text)\n",
+    "        kb_facts_by_relation[(dep_id, relation, dest_id)] = s\n",
+    "\n",
+    "\n",
+    " \n",
+    "        \n",
+    "\n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for k, v in kb_facts_by_relation.items():\n",
+    "    print(k, v)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# need to restrict which relations can be between which entities,\n",
+    "# perhaps zero in on which entities can have which relations \n",
+    "# summarize relation?\n",
+    "\n",
+    "# organize by entity ID, track frequency of both relations and entities\n",
+    "# extract incoherent relations: 1 to 1 relations, invalid relationships\n",
+    "# for these, if it is close, flag\n"
    ]
   }
  ],
