--- a/youbot/experiments/kb_2_from_archival_summarizing/kb_from_archival.ipynb
+++ b/youbot/experiments/kb_2_from_archival_summarizing/kb_from_archival.ipynb
@@ -38,7 +38,6 @@
     "from youbot.store import Store\n",
     "\n",
     "\n",
-    "\n",
     "# 0. Create documents as transcription logs of converstaions\n",
     "docs = Store().get_archival_messages()\n",
     "\n",
@@ -53,7 +52,7 @@
     "\n",
     "config = os.path.join(dir_path, \"config.cfg\")\n",
     "\n",
-    "model_name = 'en_core_web_md'\n",
+    "model_name = \"en_core_web_md\"\n",
     "try:\n",
     "    nlp = assemble(config)\n",
     "except OSError:\n",
