--- a/youbot/experiments/kb_3_from_archival_graph/3.ipynb
+++ b/youbot/experiments/kb_3_from_archival_graph/3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,42 +12,11 @@
     "import spacy\n",
     "\n",
     "\n",
-    "nlp = spacy.load('en_core_web_md')\n",
-    "cache_dir = \"./llm_cache\"\n",
+    "nlp = spacy.load(\"en_core_web_md\")\n",
     "\n",
     "# actually just do an external config file\n",
     "\n",
-    "nlp = assemble(\"config.cfg\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 77%|███████▋  | 147/192 [02:16<00:51,  1.15s/it]"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "from tqdm import tqdm\n",
-    "from youbot.store import Store\n",
-    "\n",
-    "\n",
-    "MESSAGES_COUNT = 10\n",
-    "\n",
-    "docs = Store().get_archival_messages()#z[:MESSAGES_COUNT]\n",
-    "\n",
-    "\n",
-    "docs_with_rels = []\n",
-    "for doc in tqdm(docs):\n",
-    "    docs_with_rels.append(nlp(doc))\n",
-    "\n"
+    "nlp = assemble(\"config.cfg\")"
    ]
   },
   {
@@ -56,11 +25,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from tqdm import tqdm\n",
+    "from youbot.store import Store\n",
     "\n",
+    "\n",
+    "MESSAGES_COUNT = 10\n",
+    "\n",
+    "docs = Store().get_archival_messages()  # z[:MESSAGES_COUNT]\n",
+    "\n",
+    "\n",
+    "docs_with_rels = []\n",
+    "for doc in tqdm(docs):\n",
+    "    docs_with_rels.append(nlp(doc))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "doc = docs_with_rels[0]\n",
     "\n",
     "# For NER visualization:\n",
-    "displacy.render(doc, style='ent', jupyter=True)\n",
+    "displacy.render(doc, style=\"ent\", jupyter=True)\n",
     "\n",
     "# For dependency visualization:\n",
     "# displacy.render(doc, style='dep', jupyter=True)"
@@ -79,6 +67,7 @@
     "def get_kb_entity_id(ent: Span) -> Tuple[str, str]:\n",
     "    return (ent.text, ent.label_)\n",
     "\n",
+    "\n",
     "# key: entity id\n",
     "# value: set[fact]\n",
     "kb_facts_by_entity = {}\n",
@@ -87,16 +76,20 @@
     "# value: set[fact]\n",
     "kb_facts_by_relation = {}\n",
     "\n",
+    "kb_entity_counts = {}\n",
+    "\n",
     "\n",
     "for doc in docs_with_rels:\n",
     "    entity_ids = [get_kb_entity_id(ent) for ent in doc.ents]\n",
-    "    \n",
+    "\n",
     "    for ent in doc.ents:\n",
     "        id = get_kb_entity_id(ent)\n",
     "        s = kb_facts_by_entity.get(id, set())\n",
     "        s.add(doc.text)\n",
     "        kb_facts_by_entity[id] = s\n",
-    "    \n",
+    "\n",
+    "        kb_entity_counts[id] = kb_entity_counts.get(id, 0) + 1\n",
+    "\n",
     "    for rel in doc._.rel:\n",
     "        dep_id = entity_ids[rel.dep]\n",
     "        dest_id = entity_ids[rel.dest]\n",
@@ -104,17 +97,28 @@
     "\n",
     "        if dep_id == dest_id:\n",
     "            continue\n",
-    "        \n",
-    "        \n",
+    "\n",
     "        s = kb_facts_by_relation.get((dep_id, relation, dest_id), set())\n",
     "        s.add(doc.text)\n",
     "        kb_facts_by_relation[(dep_id, relation, dest_id)] = s\n",
     "\n",
     "\n",
-    " \n",
-    "        \n",
+    "def get_entities_by_name(name: str):\n",
+    "    return [k for k in kb_entity_counts.keys() if k[0] == name]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "names = {k[0] for k in kb_entity_counts.keys()}\n",
     "\n",
-    "   "
+    "clashing_entity_names = set()\n",
+    "for n in names:\n",
+    "    if len(get_entities_by_name(n)) > 1:\n",
+    "        clashing_entity_names.add(n)"
    ]
   },
   {
@@ -123,25 +127,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for k, v in kb_facts_by_relation.items():\n",
-    "    print(k, v)\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "relation_types = {}\n",
+    "\n",
+    "for dep, type, dest in kb_facts_by_relation.keys():\n",
+    "    key = (dep, dest)\n",
+    "    s = relation_types.get(key, set())\n",
+    "    s.add(type)\n",
+    "    relation_types[key] = s\n",
+    "\n",
+    "clashing_relations = {k: v for k, v in relation_types.items() if len(v) > 1}\n",
+    "\n",
+    "\n",
+    "print(\"foo\")\n",
     "# need to restrict which relations can be between which entities,\n",
-    "# perhaps zero in on which entities can have which relations \n",
+    "# perhaps zero in on which entities can have which relations\n",
     "# summarize relation?\n",
     "\n",
     "# organize by entity ID, track frequency of both relations and entities\n",
     "# extract incoherent relations: 1 to 1 relations, invalid relationships\n",
-    "# for these, if it is close, flag\n"
+    "# for these, if it is close, flag"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
