--- a/youbot/experiments/kb_3_from_archival_graph/3.ipynb
+++ b/youbot/experiments/kb_3_from_archival_graph/3.ipynb
@@ -135,10 +135,19 @@
     "    s.add(type)\n",
     "    relation_types[key] = s\n",
     "\n",
-    "clashing_relations = {k: v for k, v in relation_types.items() if len(v) > 1}\n",
+    "clashing_relations = {k: v for k, v in relation_types.items() if len(v) > 1}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(clashing_entity_names)\n",
+    "print(clashing_relations)\n",
     "\n",
     "\n",
-    "print(\"foo\")\n",
     "# need to restrict which relations can be between which entities,\n",
     "# perhaps zero in on which entities can have which relations\n",
     "# summarize relation?\n",
@@ -147,13 +156,6 @@
     "# extract incoherent relations: 1 to 1 relations, invalid relationships\n",
     "# for these, if it is close, flag"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
