--- a/youbot/experiments/kb_3_from_archival_graph/3.ipynb
+++ b/youbot/experiments/kb_3_from_archival_graph/3.ipynb
@@ -2,159 +2,88 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import spacy\n",
-    "from spacy import displacy\n",
     "from spacy_llm.util import assemble\n",
     "import spacy\n",
+    "import pandas as pd\n",
+    "from tqdm import tqdm\n",
+    "from youbot.store import Store\n",
     "\n",
     "\n",
     "nlp = spacy.load(\"en_core_web_md\")\n",
-    "\n",
-    "# actually just do an external config file\n",
-    "\n",
     "nlp = assemble(\"config.cfg\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 192/192 [03:06<00:00,  1.03it/s]\n"
+     ]
+    }
+   ],
    "source": [
-    "from tqdm import tqdm\n",
-    "from youbot.store import Store\n",
-    "\n",
-    "\n",
     "MESSAGES_COUNT = 10\n",
+    "docs = Store().get_archival_messages()  # [:MESSAGES_COUNT]\n",
     "\n",
-    "docs = Store().get_archival_messages()  # z[:MESSAGES_COUNT]\n",
+    "\n",
+    "entities_df = pd.DataFrame(columns=[\"name\", \"label\", \"fact\"])\n",
+    "relations_df = pd.DataFrame(columns=[\"dep_name\", \"dep_label\", \"dest_name\", \"dest_label\", \"rel\", \"fact\"])\n",
     "\n",
     "\n",
-    "docs_with_rels = []\n",
+    "entities_rows = []\n",
+    "reltaions_rows = []\n",
     "for doc in tqdm(docs):\n",
-    "    docs_with_rels.append(nlp(doc))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "doc = docs_with_rels[0]\n",
+    "    enriched_doc = nlp(doc)\n",
+    "    ents = enriched_doc.ents\n",
+    "    for ent in ents:\n",
+    "        entities_rows.append({\"name\": ent.text, \"label\": ent.label_, \"fact\": doc})  # type: ignore\n",
+    "    for rel in enriched_doc._.rel:\n",
+    "        dep_name = ents[rel.dep].text\n",
+    "        dep_label = ents[rel.dep].label_\n",
+    "        dest_name = ents[rel.dest].text\n",
+    "        dest_label = ents[rel.dest].label_\n",
     "\n",
-    "# For NER visualization:\n",
-    "displacy.render(doc, style=\"ent\", jupyter=True)\n",
-    "\n",
-    "# For dependency visualization:\n",
-    "# displacy.render(doc, style='dep', jupyter=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from typing import Tuple\n",
-    "from spacy.tokens.span import Span\n",
-    "\n",
-    "\n",
-    "def get_kb_entity_id(ent: Span) -> Tuple[str, str]:\n",
-    "    return (ent.text, ent.label_)\n",
-    "\n",
-    "\n",
-    "# key: entity id\n",
-    "# value: set[fact]\n",
-    "kb_facts_by_entity = {}\n",
-    "\n",
-    "# key: (entity id, entity id)\n",
-    "# value: set[fact]\n",
-    "kb_facts_by_relation = {}\n",
-    "\n",
-    "kb_entity_counts = {}\n",
-    "\n",
-    "\n",
-    "for doc in docs_with_rels:\n",
-    "    entity_ids = [get_kb_entity_id(ent) for ent in doc.ents]\n",
-    "\n",
-    "    for ent in doc.ents:\n",
-    "        id = get_kb_entity_id(ent)\n",
-    "        s = kb_facts_by_entity.get(id, set())\n",
-    "        s.add(doc.text)\n",
-    "        kb_facts_by_entity[id] = s\n",
-    "\n",
-    "        kb_entity_counts[id] = kb_entity_counts.get(id, 0) + 1\n",
-    "\n",
-    "    for rel in doc._.rel:\n",
-    "        dep_id = entity_ids[rel.dep]\n",
-    "        dest_id = entity_ids[rel.dest]\n",
-    "        relation = rel.relation\n",
-    "\n",
-    "        if dep_id == dest_id:\n",
+    "        # ignore self relations\n",
+    "        if (dep_name, dep_label) == (dest_name, dest_label):\n",
     "            continue\n",
     "\n",
-    "        s = kb_facts_by_relation.get((dep_id, relation, dest_id), set())\n",
-    "        s.add(doc.text)\n",
-    "        kb_facts_by_relation[(dep_id, relation, dest_id)] = s\n",
+    "        reltaions_rows.append(\n",
+    "            {\n",
+    "                \"dep_name\": dep_name,\n",
+    "                \"dep_label\": dep_label,\n",
+    "                \"dest_name\": dest_name,\n",
+    "                \"dest_label\": dest_label,\n",
+    "                \"rel\": rel.relation,\n",
+    "                \"fact\": doc,\n",
+    "            }\n",
+    "        )\n",
     "\n",
     "\n",
-    "def get_entities_by_name(name: str):\n",
-    "    return [k for k in kb_entity_counts.keys() if k[0] == name]"
+    "entities_df = pd.DataFrame(entities_rows)\n",
+    "relations_df = pd.DataFrame(reltaions_rows)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "names = {k[0] for k in kb_entity_counts.keys()}\n",
-    "\n",
-    "clashing_entity_names = set()\n",
-    "for n in names:\n",
-    "    if len(get_entities_by_name(n)) > 1:\n",
-    "        clashing_entity_names.add(n)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "relation_types = {}\n",
-    "\n",
-    "for dep, type, dest in kb_facts_by_relation.keys():\n",
-    "    key = (dep, dest)\n",
-    "    s = relation_types.get(key, set())\n",
-    "    s.add(type)\n",
-    "    relation_types[key] = s\n",
-    "\n",
-    "clashing_relations = {k: v for k, v in relation_types.items() if len(v) > 1}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(clashing_entity_names)\n",
-    "print(clashing_relations)\n",
-    "\n",
-    "\n",
-    "# need to restrict which relations can be between which entities,\n",
-    "# perhaps zero in on which entities can have which relations\n",
-    "# summarize relation?\n",
-    "\n",
-    "# organize by entity ID, track frequency of both relations and entities\n",
-    "# extract incoherent relations: 1 to 1 relations, invalid relationships\n",
-    "# for these, if it is close, flag"
+    "# group facts from entities\n",
+    "grouped_entities_df = entities_df.groupby([\"name\", \"label\"]).agg({\"fact\": lambda x: list(x)}).reset_index()\n",
+    "grouped_relations_df = (\n",
+    "    relations_df.groupby([\"dep_name\", \"dep_label\", \"dest_name\", \"dest_label\", \"rel\"]).agg({\"fact\": lambda x: list(x)}).reset_index()\n",
+    ")"
    ]
   }
  ],
