--- a/youbot/experiments/kb_3_from_archival_graph/3.ipynb
+++ b/youbot/experiments/kb_3_from_archival_graph/3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,17 +20,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 192/192 [03:06<00:00,  1.03it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "MESSAGES_COUNT = 10\n",
     "docs = Store().get_archival_messages()  # [:MESSAGES_COUNT]\n",
@@ -57,6 +49,10 @@
     "        if (dep_name, dep_label) == (dest_name, dest_label):\n",
     "            continue\n",
     "\n",
+    "        # ignore dates\n",
+    "        if dep_label == \"DATE\" or dest_label == \"DATE\":\n",
+    "            continue\n",
+    "\n",
     "        reltaions_rows.append(\n",
     "            {\n",
     "                \"dep_name\": dep_name,\n",
@@ -75,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +79,19 @@
     "grouped_entities_df = entities_df.groupby([\"name\", \"label\"]).agg({\"fact\": lambda x: list(x)}).reset_index()\n",
     "grouped_relations_df = (\n",
     "    relations_df.groupby([\"dep_name\", \"dep_label\", \"dest_name\", \"dest_label\", \"rel\"]).agg({\"fact\": lambda x: list(x)}).reset_index()\n",
-    ")"
+    ")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# clashing entity types\n",
+    "labels_grouped = grouped_entities_df.groupby(['name']).agg({'label': lambda x: list(x)}).reset_index()\n",
+    "clashing_entity_labels = labels_grouped[labels_grouped['label'].apply(lambda x: len(x) > 1)]"
    ]
   }
  ],
