--- a/youbot/experiments/knowledge_base/5_gpt_35_resolving_mismatches/5.ipynb
+++ b/youbot/experiments/knowledge_base/5_gpt_35_resolving_mismatches/5.ipynb
@@ -2,16 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import logging\n",
     "import spacy\n",
+    "import spacy_llm\n",
     "from spacy_llm.util import assemble\n",
     "import spacy\n",
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
     "from youbot.store import Store\n",
+    "\n",
+    "\n",
+    "\n",
+    "# add a logger to file notebook.log\n",
+    "spacy_llm.logger.addHandler(logging.FileHandler(\"notebook.log\"))\n",
+    "spacy_llm.logger.setLevel(logging.DEBUG)\n",
     "\n",
     "\n",
     "nlp = spacy.load(\"en_core_web_md\")\n",
@@ -20,20 +28,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 192/192 [04:07<00:00,  1.29s/it]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "from time import sleep\n",
+    "\n",
+    "\n",
     "MESSAGES_COUNT = 10\n",
-    "docs = Store().get_archival_messages()  # [:MESSAGES_COUNT]\n",
+    "docs = Store().get_archival_messages()# [:MESSAGES_COUNT])\n",
     "\n",
     "\n",
     "entities_df = pd.DataFrame(columns=[\"name\", \"label\", \"fact\"])\n",
@@ -41,9 +44,10 @@
     "\n",
     "\n",
     "entities_rows = []\n",
-    "reltaions_rows = []\n",
+    "relations_rows = []\n",
     "for doc in tqdm(docs):\n",
     "    enriched_doc = nlp(doc)\n",
+    "    # sleep(3)\n",
     "    ents = enriched_doc.ents\n",
     "    for ent in ents:\n",
     "        entities_rows.append({\"name\": ent.text, \"label\": ent.label_, \"fact\": doc})  # type: ignore\n",
@@ -61,7 +65,7 @@
     "        if dep_label == \"DATE\" or dest_label == \"DATE\":\n",
     "            continue\n",
     "\n",
-    "        reltaions_rows.append(\n",
+    "        relations_rows.append(\n",
     "            {\n",
     "                \"dep_name\": dep_name,\n",
     "                \"dep_label\": dep_label,\n",
@@ -74,12 +78,12 @@
     "\n",
     "\n",
     "entities_df = pd.DataFrame(entities_rows)\n",
-    "relations_df = pd.DataFrame(reltaions_rows)"
+    "relations_df = pd.DataFrame(relations_rows)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,46 +118,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pydantic ['NORP', 'ORG']\n",
-      "On 2024-02-25, Tom displayed interest in Python programming, particularly using Pydantic for enforcing types in core classes. This suggests his continuous engagement with software development topics and his preference for efficient programming practices.\n",
-      "On 2024-04-18, assisted Tom with writing a unit test for phone number validation within his SQLModel class, and addressed a deprecation issue with Pydantic's `@validator`, guiding him towards the use of `@field_validator`.\n",
-      "Python ['ORG', 'PRODUCT']\n",
-      "On 2024-02-25, Tom displayed interest in Python programming, particularly using Pydantic for enforcing types in core classes. This suggests his continuous engagement with software development topics and his preference for efficient programming practices.\n",
-      "On 2024-02-01, Tom was working on backfilling both recall and archival memories to the system. He was using Python and SQLAlchemy, and sought assistance with several SQLAlchemy operations, such as running raw SQL queries, handling model-based queries, and managing SQLAlchemy sessions. This process involved interactions that were both technical and insightful.\n",
-      "Rocky ['GPE', 'PERSON']\n",
-      "On 2024-02-02, during an interaction, Tom asked 'Who am I'. I responded using my core memory information, highlighting his professional capacity, relationships, and the existence of his pets Elroy and Rocky. This memory helps me to continue interpreting Tom's interaction style and evolve my own character, Sam, respectively.\n",
-      "On 2024-02-26, Tom noted an improvement in Elroy's behavior towards Cesar, indicating a successful adjustment period. Rocky had a mild jealousy response, which is also part of the dynamics observed among Tom's pets.\n",
-      "SQLAlchemy ['PRODUCT', 'WORK_OF_ART']\n",
-      "On 2024-02-01, Tom was working on backfilling both recall and archival memories to the system. He was using Python and SQLAlchemy, and sought assistance with several SQLAlchemy operations, such as running raw SQL queries, handling model-based queries, and managing SQLAlchemy sessions. This process involved interactions that were both technical and insightful.\n",
-      "On 2024-04-16, provided guidance to Tom on SQLModel usage in SQLAlchemy, including field descriptions, handling auto-increment ID primary column, accepting NULL values. Also, advised suitable notification language for a homepage to inform about text message alerts.\n",
-      "SQLModel ['ORG', 'PERSON']\n",
-      "On 2024-04-18, helped Tom understand the use of Pydantic validators in SQLModel to run a validation function before inserting data into the database. Additionally, assisted Tom with a Python DeprecationWarning issue related to escape sequences in regular expressions.\n",
-      "On 2024-04-16, provided guidance to Tom on SQLModel usage in SQLAlchemy, including field descriptions, handling auto-increment ID primary column, accepting NULL values. Also, advised suitable notification language for a homepage to inform about text message alerts.\n",
-      "asyncio ['GPE', 'PERSON']\n",
-      "In a recent discussion, Tom asked about typical practices for web crawlers with respect to URL fragments and parameters. He learned that it's common to discard fragments to avoid duplicating content and that handling parameters can be more nuanced - parameterized URLs might be crawled or dismissed depending on the context.\n",
-      "\n",
-      "Tom also requested a refresher on how to create an asyncio in-memory queue. He reviewed creating a queue with asyncio.Queue, adding tasks with the put method, retrieving tasks with the get method, and confirming task completion with task_done.\n",
-      "Tom explored the essential aspects of async programming in the context of a web crawler project. He expressed a thoughtful approach considering download tasks as async due to their IO-bound nature, while maintaining file reading and link extraction as CPU-bound operations.\n",
-      "\n",
-      "He also asked about Python's asyncio specifically about semaphores and queues for managing tasks. There was a detailed discussion exploring the principles behind semaphores and their applicability in implementing rate limits.\n",
-      "\n",
-      "Furthermore, asked whether asyncio spawns threads in the background, which led to an exploration of the difference between multithreading (parallelism) and asyncio (concurrency on a single thread). His questions and engagement showed a deepening understanding of concurrent programming.\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i, row in clashing_entity_labels.iterrows():\n",
-    "    print(row['name'], row['label'])\n",
-    "    for label in row['label']:\n",
-    "        print(entities_df[(entities_df['name'] == row['name']) & (entities_df['label'] == label)]['fact'].values[0])"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
