--- a/youbot/experiments/knowledge_base/6_collab/6.ipynb
+++ b/youbot/experiments/knowledge_base/6_collab/6.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,9 +28,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 61%|██████    | 117/192 [22:21<13:59, 11.19s/it]"
+     ]
+    }
+   ],
    "source": [
     "from time import sleep\n",
     "from youbot.store import Store\n",
@@ -107,12 +115,11 @@
    "outputs": [],
    "source": [
     "# clashing entity types\n",
-    "labels_grouped = grouped_entities_df.groupby(['name']).agg({'label': lambda x: list(x), 'fact': lambda x: [item for sublist in x for item in sublist]}).reset_index()\n",
-    "clashing_entity_labels = labels_grouped[labels_grouped['label'].apply(lambda x: len(x) > 1)].reset_index()\n",
+    "labels_grouped = grouped_entities_df.groupby(['name']).agg({'label': lambda x: list(x)}).reset_index()\n",
+    "clashing_entity_labels = labels_grouped[labels_grouped['label'].apply(lambda x: len(x) > 1)]\n",
     "\n",
     "\n",
-    "\n",
-    "rels_grouped = grouped_relations_df.groupby(['dep_name', 'dest_name']).agg({'rel': lambda x: list(x), 'fact': lambda x: [item for sublist in x for item in sublist]}).reset_index()\n",
+    "rels_grouped = grouped_relations_df.groupby(['dep_name', 'dest_name']).agg({'rel': lambda x: list(x)}).reset_index()\n",
     "clashing_rels = rels_grouped[rels_grouped['rel'].apply(lambda x: len(x) > 1)]\n",
     "\n"
    ]
@@ -122,57 +129,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# resolve entities\n",
-    "import outlines\n",
-    "import outlines.models\n",
-    "from pandas import Series\n",
-    "model = outlines.models.openai('gpt-4')\n",
-    "\n",
-    "\n",
-    "# iterate through each name and list of labels, pick a winner:\n",
-    "\n",
-    "\n",
-    "def pick_label_from_general_knowledge(row: Series):# -> Any: \n",
-    "    name = row['name']\n",
-    "    prompt = f\"\"\"You are an entity resolution assistant. You must determine whether an entity refers to a widely understood entity or concept.\n",
-    "    The entity name is: {name}\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    answer= outlines.generate.choice(model, ['Yes', 'No'])(prompt)\n",
-    "    print(f\"is {name} widely understood, either by mainstream culture or by a specialized subculture or technical discipline?: {answer}\")\n",
-    "    if answer != 'Yes':\n",
-    "        return None\n",
-    "    \n",
-    "    follow_up = f\"\"\"You are an entity resolution assistant. You must categorize a name by how it would be widely understood, either from mainstream culture, or by a specialized subculture or technical discipline.\n",
-    "    # The name is {name}\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    answer = outlines.generate.choice(model, [\"PERSON\", \"ORG\", \"GPE\", \"LOC\", \"PRODUCT\", \"EVENT\", \"WORK_OF_ART\", \"DATE\", \"TIME\", \"PERCENT\", \"MONEY\", \"QUANTITY\", \"ORDINAL\", \"CARDINAL\", \"PET\", \"TECHNICAL_CONCEPT\"])(follow_up)\n",
-    "    print(f\"{name} = {answer}\")\n",
-    "    return answer\n",
-    "\n",
-    "def pick_winning_label(row: Series) -> str:\n",
-    "    labels = row['label']\n",
-    "    name = row['name']\n",
-    "    facts = \"\\n\".join(row['fact'])\n",
-    "\n",
-    "    prompt = f\"\"\"You are an entity resolution assistant. \n",
-    "    You must classify the entity with name = {name}\n",
-    "    \n",
-    "    Use both your inherent knowledge, and these facts derived from chat logs:\n",
-    "    {facts}    \n",
-    "    \"\"\"\n",
-    "    \n",
-    "    generator = outlines.generate.choice(model, labels)\n",
-    "    answer = generator(prompt)\n",
-    "    print(f\"{name}: Choices = {labels}. WINNER = {answer}\")\n",
-    "    return answer\n",
-    "\n",
-    "\n",
-    "new_df = clashing_entity_labels.apply(pick_winning_label, axis=1)\n",
-    "    \n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
