--- a/youbot/experiments/knowledge_base/5_gpt_35_resolving_mismatches/5.ipynb
+++ b/youbot/experiments/knowledge_base/5_gpt_35_resolving_mismatches/5.ipynb
@@ -14,9 +14,6 @@
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
     "# add a logger to file notebook.log\n",
     "spacy_llm.logger.addHandler(logging.FileHandler(\"notebook.log\"))\n",
     "spacy_llm.logger.setLevel(logging.DEBUG)\n",
@@ -36,7 +33,7 @@
     "from youbot.store import Store\n",
     "\n",
     "MESSAGES_COUNT = 10\n",
-    "docs = Store().get_archival_messages()# [:MESSAGES_COUNT])\n",
+    "docs = Store().get_archival_messages()  # [:MESSAGES_COUNT])\n",
     "\n",
     "\n",
     "entities_df = pd.DataFrame(columns=[\"name\", \"label\", \"fact\"])\n",
@@ -96,8 +93,7 @@
     "\n",
     "# in some passes, a subset of the labels should be discarded\n",
     "\n",
-    "# perhaps, characterize the convo by work, personal, etc and tailor retrieval accordingly\n",
-    "\n"
+    "# perhaps, characterize the convo by work, personal, etc and tailor retrieval accordingly"
    ]
   },
   {
@@ -107,14 +103,20 @@
    "outputs": [],
    "source": [
     "# clashing entity types\n",
-    "labels_grouped = grouped_entities_df.groupby(['name']).agg({'label': lambda x: list(x), 'fact': lambda x: [item for sublist in x for item in sublist]}).reset_index()\n",
-    "clashing_entity_labels = labels_grouped[labels_grouped['label'].apply(lambda x: len(x) > 1)].reset_index()\n",
+    "labels_grouped = (\n",
+    "    grouped_entities_df.groupby([\"name\"])\n",
+    "    .agg({\"label\": lambda x: list(x), \"fact\": lambda x: [item for sublist in x for item in sublist]})\n",
+    "    .reset_index()\n",
+    ")\n",
+    "clashing_entity_labels = labels_grouped[labels_grouped[\"label\"].apply(lambda x: len(x) > 1)].reset_index()\n",
     "\n",
     "\n",
-    "\n",
-    "rels_grouped = grouped_relations_df.groupby(['dep_name', 'dest_name']).agg({'rel': lambda x: list(x), 'fact': lambda x: [item for sublist in x for item in sublist]}).reset_index()\n",
-    "clashing_rels = rels_grouped[rels_grouped['rel'].apply(lambda x: len(x) > 1)]\n",
-    "\n"
+    "rels_grouped = (\n",
+    "    grouped_relations_df.groupby([\"dep_name\", \"dest_name\"])\n",
+    "    .agg({\"rel\": lambda x: list(x), \"fact\": lambda x: [item for sublist in x for item in sublist]})\n",
+    "    .reset_index()\n",
+    ")\n",
+    "clashing_rels = rels_grouped[rels_grouped[\"rel\"].apply(lambda x: len(x) > 1)]"
    ]
   },
   {
@@ -127,35 +129,57 @@
     "import outlines\n",
     "import outlines.models\n",
     "from pandas import Series\n",
-    "model = outlines.models.openai('gpt-4')\n",
+    "\n",
+    "model = outlines.models.openai(\"gpt-4\")\n",
     "\n",
     "\n",
     "# iterate through each name and list of labels, pick a winner:\n",
     "\n",
     "\n",
-    "def pick_label_from_general_knowledge(row: Series):# -> Any: \n",
-    "    name = row['name']\n",
+    "def pick_label_from_general_knowledge(row: Series):  # -> Any:\n",
+    "    name = row[\"name\"]\n",
     "    prompt = f\"\"\"You are an entity resolution assistant. You must determine whether an entity refers to a widely understood entity or concept.\n",
     "    The entity name is: {name}\n",
     "    \"\"\"\n",
-    "    \n",
-    "    answer= outlines.generate.choice(model, ['Yes', 'No'])(prompt)\n",
+    "\n",
+    "    answer = outlines.generate.choice(model, [\"Yes\", \"No\"])(prompt)\n",
     "    print(f\"is {name} widely understood, either by mainstream culture or by a specialized subculture or technical discipline?: {answer}\")\n",
-    "    if answer != 'Yes':\n",
+    "    if answer != \"Yes\":\n",
     "        return None\n",
-    "    \n",
+    "\n",
     "    follow_up = f\"\"\"You are an entity resolution assistant. You must categorize a name by how it would be widely understood, either from mainstream culture, or by a specialized subculture or technical discipline.\n",
     "    # The name is {name}\n",
     "    \"\"\"\n",
-    "    \n",
-    "    answer = outlines.generate.choice(model, [\"PERSON\", \"ORG\", \"GPE\", \"LOC\", \"PRODUCT\", \"EVENT\", \"WORK_OF_ART\", \"DATE\", \"TIME\", \"PERCENT\", \"MONEY\", \"QUANTITY\", \"ORDINAL\", \"CARDINAL\", \"PET\", \"TECHNICAL_CONCEPT\"])(follow_up)\n",
+    "\n",
+    "    answer = outlines.generate.choice(\n",
+    "        model,\n",
+    "        [\n",
+    "            \"PERSON\",\n",
+    "            \"ORG\",\n",
+    "            \"GPE\",\n",
+    "            \"LOC\",\n",
+    "            \"PRODUCT\",\n",
+    "            \"EVENT\",\n",
+    "            \"WORK_OF_ART\",\n",
+    "            \"DATE\",\n",
+    "            \"TIME\",\n",
+    "            \"PERCENT\",\n",
+    "            \"MONEY\",\n",
+    "            \"QUANTITY\",\n",
+    "            \"ORDINAL\",\n",
+    "            \"CARDINAL\",\n",
+    "            \"PET\",\n",
+    "            \"TECHNICAL_CONCEPT\",\n",
+    "        ],\n",
+    "    )(follow_up)\n",
     "    print(f\"{name} = {answer}\")\n",
     "    return answer\n",
     "\n",
+    "\n",
     "def pick_winning_label(row: Series) -> str:\n",
-    "    labels = row['label']\n",
-    "    name = row['name']\n",
-    "    facts = \"\\n\".join(row['fact'])\n",
+    "    labels = row[\"label\"]\n",
+    "    name = row[\"name\"]\n",
+    "    facts = \"\\n\".join(row[\"fact\"])\n",
     "\n",
     "    prompt = f\"\"\"You are an entity resolution assistant. \n",
     "    You must classify the entity with name = {name}\n",
@@ -163,15 +187,14 @@
     "    Use both your inherent knowledge, and these facts derived from chat logs:\n",
     "    {facts}    \n",
     "    \"\"\"\n",
-    "    \n",
+    "\n",
     "    generator = outlines.generate.choice(model, labels)\n",
     "    answer = generator(prompt)\n",
     "    print(f\"{name}: Choices = {labels}. WINNER = {answer}\")\n",
     "    return answer\n",
     "\n",
     "\n",
-    "new_df = clashing_entity_labels.apply(pick_winning_label, axis=1)\n",
-    "    \n"
+    "new_df = clashing_entity_labels.apply(pick_winning_label, axis=1)"
    ]
   }
  ],
