--- a/youbot/experiments/knowledge_base/4_open_source_model/3.ipynb
+++ b/youbot/experiments/knowledge_base/4_open_source_model/3.ipynb
@@ -92,8 +92,7 @@
     "\n",
     "# in some passes, a subset of the labels should be discarded\n",
     "\n",
-    "# perhaps, characterize the convo by work, personal, etc and tailor retrieval accordingly\n",
-    "\n"
+    "# perhaps, characterize the convo by work, personal, etc and tailor retrieval accordingly"
    ]
   },
   {
@@ -103,13 +102,12 @@
    "outputs": [],
    "source": [
     "# clashing entity types\n",
-    "labels_grouped = grouped_entities_df.groupby(['name']).agg({'label': lambda x: list(x)}).reset_index()\n",
-    "clashing_entity_labels = labels_grouped[labels_grouped['label'].apply(lambda x: len(x) > 1)]\n",
+    "labels_grouped = grouped_entities_df.groupby([\"name\"]).agg({\"label\": lambda x: list(x)}).reset_index()\n",
+    "clashing_entity_labels = labels_grouped[labels_grouped[\"label\"].apply(lambda x: len(x) > 1)]\n",
     "\n",
     "\n",
-    "rels_grouped = grouped_relations_df.groupby(['dep_name', 'dest_name']).agg({'rel': lambda x: list(x)}).reset_index()\n",
-    "clashing_rels = rels_grouped[rels_grouped['rel'].apply(lambda x: len(x) > 1)]\n",
-    "\n"
+    "rels_grouped = grouped_relations_df.groupby([\"dep_name\", \"dest_name\"]).agg({\"rel\": lambda x: list(x)}).reset_index()\n",
+    "clashing_rels = rels_grouped[rels_grouped[\"rel\"].apply(lambda x: len(x) > 1)]"
    ]
   },
   {
@@ -150,9 +148,9 @@
    ],
    "source": [
     "for i, row in clashing_entity_labels.iterrows():\n",
-    "    print(row['name'], row['label'])\n",
-    "    for label in row['label']:\n",
-    "        print(entities_df[(entities_df['name'] == row['name']) & (entities_df['label'] == label)]['fact'].values[0])"
+    "    print(row[\"name\"], row[\"label\"])\n",
+    "    for label in row[\"label\"]:\n",
+    "        print(entities_df[(entities_df[\"name\"] == row[\"name\"]) & (entities_df[\"label\"] == label)][\"fact\"].values[0])"
    ]
   }
  ],
