--- a/youbot/experiments/knowledge_base/7_local_ner_gpt_resolution/7.ipynb
+++ b/youbot/experiments/knowledge_base/7_local_ner_gpt_resolution/7.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Setup"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,15 +32,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Perform NER and relations"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 61%|██████    | 117/192 [22:21<13:59, 11.19s/it]"
+      "100%|██████████| 193/193 [04:00<00:00,  1.25s/it]\n"
      ]
     }
    ],
@@ -41,8 +55,11 @@
     "from time import sleep\n",
     "from youbot.store import Store\n",
     "\n",
-    "MESSAGES_COUNT = 10\n",
-    "docs = Store().get_archival_messages()  # [:MESSAGES_COUNT])\n",
+    "docs = Store().get_archival_messages()\n",
+    "\n",
+    "with (open('data.pkl', 'wb')) as f:\n",
+    "    pd.DataFrame(docs).to_pickle(f)\n",
+    "    \n",
     "\n",
     "\n",
     "entities_df = pd.DataFrame(columns=[\"name\", \"label\", \"fact\"])\n",
@@ -53,7 +70,7 @@
     "relations_rows = []\n",
     "for doc in tqdm(docs):\n",
     "    enriched_doc = nlp(doc)\n",
-    "    sleep(0.5)\n",
+    "    sleep(0.1) # sleep for openai\n",
     "    ents = enriched_doc.ents\n",
     "    for ent in ents:\n",
     "        entities_rows.append({\"name\": ent.text, \"label\": ent.label_, \"fact\": doc})  # type: ignore\n",
@@ -84,12 +101,25 @@
     "\n",
     "\n",
     "entities_df = pd.DataFrame(entities_rows)\n",
-    "relations_df = pd.DataFrame(relations_rows)"
+    "relations_df = pd.DataFrame(relations_rows)\n",
+    "\n",
+    "with open('entities.pkl', 'wb') as f:\n",
+    "    entities_df.to_pickle(f)\n",
+    "    \n",
+    "with open('relations.pkl', 'wb') as f:\n",
+    "    relations_df.to_pickle(f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Resolve inconsistencies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
